# UYTDownloader

./: .dockerignore  .env.example  .gitignore  MANUAL.md  README.md  docker-compose.ghcr.yml  docker-compose.gpu.yml  docker-compose.yml
.claude/: launch.json
.github/workflows/: docker-publish.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 628f4eb90317_initial_schema.py  841e1f6e41bf_add_subscriptions_and_filters.py  ecbf26370492_merge_v012_and_v15b_heads.py  manual_add_transcripts.py  manual_add_v012_columns.py  manual_add_v15_enum_values.py  manual_add_v15b_enum_values.py
backend/app/: celery_app.py  config.py  database.py  db.py  main.py  sync_db.py
backend/app/api/: archive.py  compilations.py  jobs.py  library.py  probe.py  router.py  search.py  sources.py  storage.py  subscriptions.py
backend/app/models/: __init__.py  archive.py  artifact.py  base.py  entry.py  enums.py  format_snapshot.py  job.py  source.py  source_entry.py  subscription.py  transcript.py
backend/app/schemas/: compilation.py  entry.py  job.py  probe.py  source.py  subscription.py
backend/app/services/: compilation_service.py  gpu_service.py  job_service.py  postprocess_service.py  probe_service.py  sponsorblock_service.py  storage_service.py  subscription_service.py  transcript_service.py
backend/app/worker/: tasks.py  ytdlp_wrapper.py
docker/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
extension/: content.css  content.js  manifest.json  popup.html  popup.js
frontend/src/lib/: api.ts
unraid/: uytdownloader.xml
(+12 files in other folders)
